--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,6 @@
 /* Base Margin and Padding */
-$base-margin: 10px;
-$base-padding: 10px;
+$base-margin: 5px;
+$base-padding: 5px;
 
 /* Breakpoints */
 $screen-xs: 576px;
@@ -81,7 +81,105 @@ $grid-columns: 12;
     grid-column: span 12;
 }
 
-@media screen and (max-width: var($screen-xs)) {}
+@media screen and (max-width: $screen-xs) {
+    .col-xs-1 {
+        grid-column: span 1;
+    }
+
+    .col-xs-2 {
+        grid-column: span 2;
+    }
+
+    .col-xs-3 {
+        grid-column: span 3;
+    }
+
+    .col-xs-4 {
+        grid-column: span 4;
+    }
+
+    .col-xs-5 {
+        grid-column: span 5;
+    }
+
+    .col-xs-6 {
+        grid-column: span 6;
+    }
+
+    .col-xs-7 {
+        grid-column: span 7;
+    }
+
+    .col-xs-8 {
+        grid-column: span 8;
+    }
+
+    .col-xs-9 {
+        grid-column: span 9;
+    }
+
+    .col-xs-10 {
+        grid-column: span 10;
+    }
+
+    .col-xs-11 {
+        grid-column: span 11;
+    }
+
+    .col-xs-12 {
+        grid-column: span 12;
+    }
+}
+
+@media screen and (min-width: $screen-sm) and (max-width: $screen-md) {
+    .col-sm-1 {
+        grid-column: span 1;
+    }
+
+    .col-sm-2 {
+        grid-column: span 2;
+    }
+
+    .col-sm-3 {
+        grid-column: span 3;
+    }
+
+    .col-sm-4 {
+        grid-column: span 4;
+    }
+
+    .col-sm-5 {
+        grid-column: span 5;
+    }
+
+    .col-sm-6 {
+        grid-column: span 6;
+    }
+
+    .col-sm-7 {
+        grid-column: span 7;
+    }
+
+    .col-sm-8 {
+        grid-column: span 8;
+    }
+
+    .col-sm-9 {
+        grid-column: span 9;
+    }
+
+    .col-sm-10 {
+        grid-column: span 10;
+    }
+
+    .col-sm-11 {
+        grid-column: span 11;
+    }
+
+    .col-sm-12 {
+        grid-column: span 12;
+    }
+}
 
 /* Fonts */
 @font-face {
