--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,17 +1,4 @@
-/* Base Margin and Padding */
-$base-margin: 5px;
-$base-padding: 5px;
-
-/* Breakpoints */
-$screen-xs: 576px;
-$screen-sm: 576px;
-$screen-md: 768px;
-$screen-lg: 992px;
-$screen-xl: 1200px;
-$screen-xxl: 1400px;
-
-/* Grid Columns */
-$grid-columns: 12;
+@import './_variables.scss';
 
 
 * {
@@ -81,6 +68,7 @@ $grid-columns: 12;
     grid-column: span 12;
 }
 
+// Extra small devices - Mobiles
 @media screen and (max-width: $screen-xs) {
     .col-xs-1 {
         grid-column: span 1;
@@ -131,6 +119,7 @@ $grid-columns: 12;
     }
 }
 
+// Small devices - like iPad mini
 @media screen and (min-width: $screen-sm) and (max-width: $screen-md) {
     .col-sm-1 {
         grid-column: span 1;
@@ -181,25 +170,157 @@ $grid-columns: 12;
     }
 }
 
-/* Fonts */
-@font-face {
-    font-family: "Noto-Regular";
-    src: url("~@/assets/fonts/NotoSans-Regular.ttf");
+// Medium devices - iPad
+@media screen and (min-width: $screen-md) and (max-width: $screen-lg) {
+    .col-md-1 {
+        grid-column: span 1;
+    }
+
+    .col-md-2 {
+        grid-column: span 2;
+    }
+
+    .col-md-3 {
+        grid-column: span 3;
+    }
+
+    .col-md-4 {
+        grid-column: span 4;
+    }
+
+    .col-md-5 {
+        grid-column: span 5;
+    }
+
+    .col-md-6 {
+        grid-column: span 6;
+    }
+
+    .col-md-7 {
+        grid-column: span 7;
+    }
+
+    .col-md-8 {
+        grid-column: span 8;
+    }
+
+    .col-md-9 {
+        grid-column: span 9;
+    }
+
+    .col-md-10 {
+        grid-column: span 10;
+    }
+
+    .col-md-11 {
+        grid-column: span 11;
+    }
+
+    .col-md-12 {
+        grid-column: span 12;
+    }
 }
 
-@font-face {
-    font-family: "Noto-Italic";
-    src: url("~@/assets/fonts/NotoSans-Italic.ttf");
+// Large devices - 13 inch laptop / iPad Pro
+@media screen and (min-width: $screen-lg) and (max-width: $screen-xl) {
+    .col-lg-1 {
+        grid-column: span 1;
+    }
+
+    .col-lg-2 {
+        grid-column: span 2;
+    }
+
+    .col-lg-3 {
+        grid-column: span 3;
+    }
+
+    .col-lg-4 {
+        grid-column: span 4;
+    }
+
+    .col-lg-5 {
+        grid-column: span 5;
+    }
+
+    .col-lg-6 {
+        grid-column: span 6;
+    }
+
+    .col-lg-7 {
+        grid-column: span 7;
+    }
+
+    .col-lg-8 {
+        grid-column: span 8;
+    }
+
+    .col-lg-9 {
+        grid-column: span 9;
+    }
+
+    .col-lg-10 {
+        grid-column: span 10;
+    }
+
+    .col-lg-11 {
+        grid-column: span 11;
+    }
+
+    .col-lg-12 {
+        grid-column: span 12;
+    }
 }
 
-@font-face {
-    font-family: "Noto-Bold";
-    src: url("~@/assets/fonts/NotoSans-Bold.ttf");
-}
+// Extra Large devices - Monitor Screen
+@media screen and (min-width: $screen-xl) and (max-width: $screen-xxl) {
+    .col-xl-1 {
+        grid-column: span 1;
+    }
 
-@font-face {
-    font-family: "Noto-BoldItalic";
-    src: url("~@/assets/fonts/NotoSans-BoldItalic.ttf");
+    .col-xl-2 {
+        grid-column: span 2;
+    }
+
+    .col-xl-3 {
+        grid-column: span 3;
+    }
+
+    .col-xl-4 {
+        grid-column: span 4;
+    }
+
+    .col-xl-5 {
+        grid-column: span 5;
+    }
+
+    .col-xl-6 {
+        grid-column: span 6;
+    }
+
+    .col-xl-7 {
+        grid-column: span 7;
+    }
+
+    .col-xl-8 {
+        grid-column: span 8;
+    }
+
+    .col-xl-9 {
+        grid-column: span 9;
+    }
+
+    .col-xl-10 {
+        grid-column: span 10;
+    }
+
+    .col-xl-11 {
+        grid-column: span 11;
+    }
+
+    .col-xl-12 {
+        grid-column: span 12;
+    }
 }
 
 /* Margins */
@@ -341,6 +462,147 @@ $grid-columns: 12;
 
 .ml-6 {
     margin-left: calc(#{$base-margin} * 6);
+}
+
+/* Padding */
+.p-0 {
+    padding: calc(#{$base-padding} * 1);
+}
+
+.p-1 {
+    padding: calc(#{$base-padding} * 1);
+}
+
+.p-2 {
+    padding: calc(#{$base-padding} * 2);
+}
+
+.p-3 {
+    padding: calc(#{$base-padding} * 3);
+}
+
+.p-4 {
+    padding: calc(#{$base-padding} * 4);
+}
+
+.p-5 {
+    padding: calc(#{$base-padding} * 5);
+}
+
+.p-6 {
+    padding: calc(#{$base-padding} * 6);
+}
+
+.pt-0 {
+    padding-top: calc(#{$base-padding} * 0);
+}
+
+.pt-1 {
+    padding-top: calc(#{$base-padding} * 1);
+}
+
+.pt-2 {
+    padding-top: calc(#{$base-padding} * 2);
+}
+
+.pt-3 {
+    padding-top: calc(#{$base-padding} * 3);
+}
+
+.pt-4 {
+    padding-top: calc(#{$base-padding} * 4);
+}
+
+.pt-5 {
+    padding-top: calc(#{$base-padding} * 5);
+}
+
+.pt-6 {
+    padding-top: calc(#{$base-padding} * 6);
+}
+
+.pr-0 {
+    padding-right: calc(#{$base-padding} * 0);
+}
+
+.pr-1 {
+    padding-right: calc(#{$base-padding} * 1);
+}
+
+.pr-2 {
+    padding-right: calc(#{$base-padding} * 2);
+}
+
+.pr-3 {
+    padding-right: calc(#{$base-padding} * 3);
+}
+
+.pr-4 {
+    padding-right: calc(#{$base-padding} * 4);
+}
+
+.pr-5 {
+    padding-right: calc(#{$base-padding} * 5);
+}
+
+.pr-6 {
+    padding-right: calc(#{$base-padding} * 6);
+}
+
+.pb-0 {
+    padding-bottom: calc(#{$base-padding} * 0);
+}
+
+.pb-1 {
+    padding-bottom: calc(#{$base-padding} * 1);
+}
+
+.pb-2 {
+    padding-bottom: calc(#{$base-padding} * 2);
+}
+
+.pb-3 {
+    padding-bottom: calc(#{$base-padding} * 3);
+}
+
+.pb-4 {
+    padding-bottom: calc(#{$base-padding} * 4);
+}
+
+.pb-5 {
+    padding-bottom: calc(#{$base-padding} * 5);
+}
+
+.pb-6 {
+    padding-bottom: calc(#{$base-padding} * 6);
+}
+
+.pl-0 {
+    padding-left: calc(#{$base-padding} * 0);
+}
+
+.pl-1 {
+    padding-left: calc(#{$base-padding} * 1);
+}
+
+.pl-2 {
+    padding-left: calc(#{$base-padding} * 2);
+}
+
+.pl-3 {
+    padding-left: calc(#{$base-padding} * 3);
+}
+
+.pl-4 {
+    padding-left: calc(#{$base-padding} * 4);
+}
+
+.pl-5 {
+    padding-left: calc(#{$base-padding} * 5);
+}
+
+.pl-6 {
+    padding-left: calc(#{$base-padding} * 6);
 }
 
 
